Alpha 0.1.8.38
- Fixed bottom row of blocks sometimes lagging behind the rest of the door when dragging over other blocks (BigDoor, SlidingDoor).

Alpha 0.1.8.37
- Add support for Minecraft 1.18.2. Massive thanks to Bonn2 for helping me test this!
- Remove duplicated messages in item names/lores in the GUI. Thanks, DjeyMute, for the suggestion!

Alpha 0.1.8.36
- Fix issue with buttons etc when placed on/next to powerblocks if the powerblocks are too close/inside the door. Thanks, Lilith88, for the bug report!
- Add bedrock and portal stuff to the default materials blacklist. Thanks, Henriko Magnifico, for the bug report!
- Fix FakePlayerCreator trying to retrieve a recently-remove method. Thanks, SlimeDog, for the bug report!

Alpha 0.1.8.35
- Log more information when a door cannot be toggled because there's no available space.
- Fixed incorrect minimum world height reporting. Thanks, EditChris, for the bug report!
- Fixed animated blocks disappearing after 100 ticks when used under y=0. Thanks, EditChris, for the bug report!

Alpha 0.1.8.34
- Fixed missing entry for the resource pack for 1.18. Thanks, N1ghthauq and ToBugs, for the bug reports!

Alpha 0.1.8.33
- Add full support for Minecraft 1.18.
- Added code generation to generate the required code for unsupported versions. This is disabled by default, but can be enabled in the config via the "allowCodeGeneration" and the "forceCodeGeneration" options. This can only be used to generate code for versions after 1.17.
- Removed a bunch of unused code to make updates a bit easier going forward.
- Fix the /namedoor command giving you more sticks when running the command multiple times. Thanks, MiniMoro, for the bug report!
- Add /newslidingdoor command as a shortcut command for creating new sliding doors. Thanks, Vexius, for the suggestion!
- Update Lands integration for version 5 series. Thanks, Nimari, for the bug report and helping out resolving some issues!